--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
         <meta http-equiv="content-type" content="text/html; charset=UTF8">
 		<meta charset="utf-8">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
-		<title></title>
+		<title>RAC Eid Greetings</title>
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
+		<!-- Favicons-->
+		<link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
 		<link href="https://fonts.googleapis.com/css?family=Lato|Petit Formal Script" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700;900&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="css/skeleton.css">
