--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<link rel="stylesheet" href="css/skeleton.css">
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/card.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
 	</head>
 	<body>
@@ -32,7 +33,7 @@
 		">
 			<div class="cardContainer">
 				<div id="card-container" class="row">
-					<div class="info_">
+					<div class="info_ animate__animated animate__fadeInUp">
 						<p>Directions: Enter your name in the text bar then click “save card” button to save your customized Eid Al Adha Greeting to your local device.  </p>
 					</div>
 					<div class=" text-container">
@@ -48,7 +49,7 @@
 					</div>
 				</div>
 				
-				<div class="row form-container">
+				<div class="row form-container animate__animated animate__fadeInUp animate__delay-1s">
 					<div class="column">
 						<form style="display: flex;
 						align-items: baseline;
