--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				
 						<img src="./img/eidaladha.jpg" id="card-image">
 						<div  id="card-title" style="text-align: right;">
-							Place Name Here
+							Mohammed
 						</div>
 						<!-- <div id="snow"></div> -->
 					</div>
@@ -55,7 +55,7 @@
 						align-items: baseline;
 						justify-content: center;">
 							<!-- <label for="title">obladi oblada:</label> -->
-							<input type="text" id="title" name="title" placeholder="Put your name here" style="width: 50%;">
+							<input type="text" id="title" name="title" placeholder="Place Name Here" style="width: 50%;">
 							<!-- <label for="from">From:</label> -->
 							<!-- <input type="email" id="email" name="email" placeholder="email po, dito po"> -->
 							<label for="image" style="display: none;">Background Image:</label>
