--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 						<div class="col">
 							<div class="info_ animate__animated animate__fadeInUp">
 								<!-- <div><a href="">EN</a></div> -->
-								<p style="margin-bottom: 5px">توجه: ادخل اسمك ورسالتك في الخانات بالأسفل، ثم اضغط على (حفظ) وستجد بطاقة التهنئة للعيد برسالتك موقعة بإسمك في جهازك. </p>
+								<p style="margin-bottom: 5px; direction: rtl;">توجه: ادخل اسمك ورسالتك في الخانات بالأسفل، ثم اضغط على (حفظ) وستجد بطاقة التهنئة للعيد برسالتك موقعة بإسمك في جهازك. </p>
 								<p>Directions: Enter your name and your greeting word in the text bars then click “Save Card” button to save your customized Eid Al Adha Greeting to your local device. </p>
 								
 							</div>
