--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
 								
 							</div>
 		
-							<div id="card-container" class="row" style="max-width: 1400px; max-height: 1400px;">
+							<div id="card-container" class="row" style="width: 700px !important; height: 700px !important;">
 								<div class=" text-container">
 									<!-- <p id="card-msg">Lorum Ipsum and a Happy New Year! We would like to thank our entire community for their support this year. We enjoyed all the challenged and achievements 2017 brought our way and we’re looking forward to what 2018 will bring.<br><br>May your holidays be filled with code and cocoa!</p>
 									<h3 id="card-from">Love Lighthouse Labs</h3> -->
 							
-									<img src="./img/adha.jpg" id="card-image" style="max-width: 100%; width: 100%">
+									<img src="./img/eidaladha.png" id="card-image" style="max-width: 100%; width: 100%">
 									<div  id="card-title" style="text-align: right;">
 										Name Surname
 									</div>
